# cpp-various

./: .gitignore  CMakeLists.txt  LICENSE  README.md  setup.sh
scripts/: compress.py  tree_to_c_array.py
src/: any_no_rtti.cpp  coroutines0.cpp  huffman_decoding.cpp  huffman_encoding.cpp
src/coroutines1/: client.cpp  lib.hpp  server.cpp
src/modules/: main.cpp  module_test.cpp  module_test_a.cpp
